--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll": "^0.1.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
