--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll": "^0.1.5",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "semantic-ui-calendar-react": "^0.15.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "web-vitals": "^1.1.2"
