--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-forecast": "0.0.7",
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroll-component": "^6.1.0",
     "react-moment": "^1.1.1",
